maven ver changed, update tycho model